2010-02-10  Sancho Lerena <slerena@artica.es>

	* operation/reporting/reporting_viewer_pdf.php
	include/functions_reporting_pdf.php: Small fixes for PDF reporting. 
	Decode entities to show texts correctly in description of each element.

	* pandoradb.sql: new enterprise structures.

2010-02-10 Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_gis.php: in function "saveMap" now save the default
	connection.
	
	* operation/gis_maps/ajax.php: add option "get_data_conexion" for get by
	ajax the data connection when pass id_connection.
	
	* godmode/gis_maps/configure_gis_map.php: now you can set the default
	connection and too load the data by default for each connection.

2010-02-10  Pablo de la Concepción <pablo.concepcion@artica.es>

	* godmode/gis_maps/index.php: Fixed regresion, standarized using map_id
	as parameter.

	* pandoradb.sql, extras/pandoradb_migrate_v3.0_to_v3.1.sql: Added column
	default_map to table tgis_map to mark the default map

2010-02-10  Sancho Lerena <slerena@artica.es>

	* events.php: Fixed a bad link with an invalid id_agent.

	* pandoradb.sql: Changes in several tables and new tgroup_stat table.
	Added several index and dropped some fields in tagente_datos and 
	tagente_datos_string tagent_access.
	
	* godmode/setup/setup.php, 
	* include/functions_config.php: Management of new timezone settings and
	realtime stats parameters.

	* include/config_process.php: New timezone management. Updated build.

	* pandoradb_data.sql: Build update. Added new tokens realtimestats and
	stats_interval.

	* install.php: Several changes: Now display GPL licence, better SQL error
	management, and steps are shown now as text instead a progress bar. Also 
	show version and build of the installer.

	* extensions/dbmanager.php: Removed some warnings

	* extras/pandoradb_migrate_v3.0_to_v3.1.sql: Updated with latest changs.

	* godmode/agentes/module_manager_editor_network.php
	godmode/agentes/configurar_agente.php